<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.shopping.ShoppingFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/tvShoppingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/shopping_title"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Delete Checked Button -->
    <Button
        android:id="@+id/btnDeleteChecked"
        style="@style/Theme.Wanda.Button.Danger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:minHeight="48dp"
        android:text="@string/btn_delete_checked"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShoppingTitle"
        tools:visibility="visible" />

    <!-- Shopping List RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShopping"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:clipToPadding="false"
        android:padding="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteChecked"
        tools:listitem="@layout/item_shopping" />

    <!-- Empty State Text -->
    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:textColor="@color/textSecondary"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!-- FAB Add Item -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/add_item"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/primary"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="32dp"
        app:tint="@color/onPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>
